# darling-openssh

./: CMakeLists.txt  README.md
etc/: sshd_config
gensrc/: config.h  umac128.c
openssh/: .gitignore  readpass.c
usr/share/man/man1/: ssh-keygen.1  ssh-keyscan.1  ssh.1
usr/share/man/man5/: moduli.5  ssh_config.5  sshd_config.5
usr/share/man/man8/: ssh-keysign.8  sshd.8
